# nix-upgrade

./: Cargo.toml  README.md  module.nix  shell.nix
.github/workflows/: rust.yml
src/: main.rs
